# YALS

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  binding.cpp  compile.sh  config.yaml  config_sample.yml  ctypes_test.py  deno.json  generateGitSha.ts  main.ts  minimal_test_setup.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build.yml  warmup.yml
api/: server.ts
api/OAI/: router.ts
api/OAI/types/: chatCompletions.ts  completions.ts  context.ts  tools.ts
api/OAI/utils/: chatCompletion.ts  completion.ts  generation.ts  tools.ts
api/core/: router.ts
api/core/types/: auth.ts  health.ts  model.ts  template.ts  test.ts  token.ts
api/core/utils/: model.ts
api/middleware/: authMiddleware.ts  checkModelMiddleware.ts  inlineLoadMiddleware.ts  oaiContextMiddleware.ts  requestIdMiddleware.ts  requestLogMiddleware.ts
bindings/: CMakeLists.txt  binding.cpp  binding.h  bindings.ps1  bindings.sh  bindings.ts  generationResources.ts  grammar.ts  job.ts  lib.ts  minimal_cpp_test.cpp  readbackBuffer.ts  samplers.ts  sharedResources.ts  symbols.ts  trie.hpp  types.ts  utils.ts
bindings/server/: c_library.cpp  c_library.h  forward_sequence_filter.hpp  generation_resources.hpp  inference_args.hpp  json_status.hpp  multisampler.hpp  presampler.hpp  processor.hpp  readback_buffer.hpp  request.hpp  rule_stream.hpp  samplers.hpp  sequence_stream.hpp  server_basic_example.cpp  shared_resource_bundle.hpp  slot.hpp  tokenization.hpp  trie.hpp
common/: actions.ts  args.ts  auth.ts  config.ts  configModels.ts  errors.ts  extendZod.ts  logging.ts  model.ts  modelContainer.ts  myZod.ts  networking.ts  samplerOverrides.ts  sampling.ts  templating.ts  utils.ts
sampler_overrides/: safe_defaults.yml  sample_preset.yml
src/: binding.cpp
src/include/: binding.hpp  utils.hpp
templates/: alpaca.jinja
types/: jinja.d.ts  nunjucks.d.ts  utils.ts
